--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ h1
    }
 
 section {
-	background-color: gray;
+	background-color: grey;
 	border: 1px solid black;
 	padding: 3%;
 	position: relative;
